cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/deepseek-reasoner/row_14_update_7_template_20250503_081004.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates ENI with multiple EIPs and secondary IPs in a self-contained VPC
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs '']

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ENI Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ENI:
    Type: AWS::EC2::NetworkInterface
    DependsOn: SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      GroupSet:
        - !Ref SecurityGroup
      Description: Multi-EIP ENI
      SecondaryPrivateIpAddressCount: 2

  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EIP1Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      NetworkInterfaceId: !Ref ENI
      PrivateIpAddress: !Select [0, !GetAtt ENI.SecondaryPrivateIpAddresses]

  EIP2Association:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt EIP2.AllocationId
      NetworkInterfaceId: !Ref ENI
      PrivateIpAddress: !Select [1, !GetAtt ENI.SecondaryPrivateIpAddresses]

Outputs:
  EIP1PublicIP:
    Value: !GetAtt EIP1.PublicIp
  EIP2PublicIP:
    Value: !GetAtt EIP2.PublicIp
  ENIId:
    Value: !Ref ENI
  SecondaryIPs:
    Value: !Join [",", !GetAtt ENI.SecondaryPrivateIpAddresses]
  VPCId:
    Value: !Ref VPC
  SubnetId:
    Value: !Ref Subnet
  SecurityGroupId:
    Value: !Ref SecurityGroup
